# django-blog

./: .gitignore  Dockerfile  README.md  compose.yml  db.sqlite3  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_image_name_post_image.py  0003_comment.py
blog/static/blog/: all-posts.css  post-detail.css  stored-posts.css
blog/templates/blog/: index.html  post-detail.html  posts.html  stored-posts.html
blog/templates/blog/includes/: post.html
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_author_book_is_bestseller_alter_book_rating.py  0003_alter_book_author.py  0004_book_slug.py  0005_author_alter_book_author.py  0006_alter_book_author.py  0007_address_author_address.py  0008_country_alter_address_options_and_more.py  0009_alter_country_options.py
books/static/books/: book_detail.css  index.css
books/templates/books/: book_detail.html  index.html
my_site/: settings.py  urls.py
static/: style.css
templates/: 404.html  base.html
